[metadata]
name = testver
version = 1.0.1
description-file = README.md
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Programming Language :: Python
keywords =
    versioning
    research

[options]
install_requires =
    rht-labs-ocp~=0.0.6

python_requires = >=3.6.5
package_dir =
    =.
zip_safe = True

[files]
packages =
    testver